@@ -20,7 +20,7 @@ class PreDbApi(base.SceneDbApiBase):
     async def _search(self, keywords, group):
         if group:
             keywords = list(keywords)
-            keywords.extend(('@team', str(group)))
+            keywords.extend(('@team', str(group).replace('@', r'\@')))
         params = {'q': ' '.join((kw.lower() for kw in keywords)), 'count': 1000}
         _log.debug('Scene search: %r, %r', self._search_url, params)
 
